feat : data collect 기능